@@ -21,6 +21,7 @@ LASTEXIT_CSFILES =				\
 	$(srcdir)/InfoWindow.cs			\
 	$(srcdir)/InternalProcess.cs		\
 	$(srcdir)/MagicCoverImage.cs		\
+	$(srcdir)/NeighbourView.cs		\
 	$(srcdir)/Player.cs			\
 	$(srcdir)/PlayerWindow.cs		\
 	$(srcdir)/RecentStations.cs		\
